[metadata]
name = napari-nasa-samples
version = 0.0.5
description = This napari plugin provides sample datasets from NASA.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/royerloic/napari-nasa-samples
author = Loic A. Royer
author_email = royerloic@gmail.com
license = MPL-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/royerloic/napari-nasa-samples/issues
    Documentation = https://github.com/royerloic/napari-nasa-samples#README.md
    Source Code = https://github.com/royerloic/napari-nasa-samples
    User Support = https://github.com/royerloic/napari-nasa-samples/issues

[options]
packages = find:
install_requires =
    numpy
    requests
    pillow


python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-nasa-samples = napari_nasa_samples:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
